PB0-11 WIP html responsive

--- a/webapp/niab/templates/base.html
+++ b/webapp/niab/templates/base.html
@@ -1,25 +1,37 @@
 {% load static tailwind_tags %}
+
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="fr">
+
 	<head>
-    <title>Django Tailwind</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+    	<title>{% block title %}{% endblock title %}</title>
 		{% tailwind_css %}
+		{% block script %}{% endblock script %}
 	</head>
 
-	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
-		<div class='flex justify-center'>
-			<img src="" alt="logo">
-		</div>
-		<div class="container mx-auto">
-			<section class="flex items-center justify-center h-screen">
-				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
-			</section>
-		</div>
-		<div class="bg-cream h-56">
-			<h2>C'est un test</h2>
-		</div>
+	<body class="font-text text-black min-h-screen">
+
+		{% include "includes/header.html" %}
+
+		<main class="bg-c-light">
+
+			{% if messages %}
+				<div class="p-4 border border-c-green">
+					{% for message in messages %}
+						<p>{{ messages }}</p>
+					{% endfor %}
+				</div>
+			{% endif %}
+
+			{% block content %}{% endblock content %}
+
+		</main>
+
+		{% include "includes/footer.html" %}
+
 	</body>
+
 </html>
