PB0-11 WIP Maj html fonctionnel

--- a/webapp/niab/templates/base.html
+++ b/webapp/niab/templates/base.html
@@ -7,19 +7,21 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="{% static "img/favicon.png" %}" rel="icon" type="image/x-icon">
     	<title>{% block title %}{% endblock title %}</title>
 		{% tailwind_css %}
+		<script src="{% static "js/menu.js" %}"></script>
 		{% block script %}{% endblock script %}
 	</head>
 
-	<body class="font-text text-black min-h-screen">
+	<body class="font-text text-black min-h-screen grid grid-rows-[auto,1fr,auto]">
 
 		{% include "includes/header.html" %}
 
-		<main class="bg-c-light">
+		<main class="bg-c-light flex flex-col items-center">
 
 			{% if messages %}
-				<div class="p-4 border border-c-green">
+				<div class="my-5 p-4 border border-c-green">
 					{% for message in messages %}
 						<p>{{ messages }}</p>
 					{% endfor %}
