--- a/webapp/niab/authentication/templates/authentication/login.html
+++ b/webapp/niab/authentication/templates/authentication/login.html
@@ -2,4 +2,6 @@
 
 {% block title %}Se connecter - NIAB{% endblock title %}
 
-{% block content %}{% endblock content %}
+{% block content %}
+
+{% endblock content %}
