--- a/webapp/niab/dashboard/templates/dashboard/statistic.html
+++ b/webapp/niab/dashboard/templates/dashboard/statistic.html
@@ -2,4 +2,6 @@
 
 {% block title %}Statistiques - NIAB{% endblock title %}
 
-{% block content %}{% endblock content %}
+{% block content %}
+
+{% endblock content %}
