--- a/webapp/niab/dashboard/templates/dashboard/top10.html
+++ b/webapp/niab/dashboard/templates/dashboard/top10.html
@@ -2,4 +2,6 @@
 
 {% block title %}Top 10 - NIAB{% endblock title %}
 
-{% block content %}{% endblock content %}
+{% block content %}
+
+{% endblock content %}
