PBO-11 App responsive fonctionnel

--- a/webapp/niab/templates/base.html
+++ b/webapp/niab/templates/base.html
@@ -14,7 +14,7 @@
 		{% block script %}{% endblock script %}
 	</head>
 
-	<body class="font-text text-black min-h-screen grid grid-rows-[auto,1fr,auto]">
+	<body class="text-xs md:text-base font-text text-black min-h-screen grid grid-rows-[auto,1fr,auto]">
 
 		{% include "includes/header.html" %}
 
