--- a/webapp/niab/templates/includes/footer.html
+++ b/webapp/niab/templates/includes/footer.html
@@ -6,11 +6,11 @@
 
     <div class="logo-style">
         <a href="{{ top10_url }}">
-            <img src="{% static "img/footer-logo.png" %}" class="w-52 h-auto" alt="Logo pied-de-page">
+            <img src="{% static "img/footer-logo.png" %}" class="w-28 md:w-40 lg:w-52 h-auto" alt="Logo pied-de-page">
         </a>
     </div>
     <div class="flex items-center">
-        <p class='text-sm'>Semaine du 03 avril 2024</p>
+        <p class='md:text-sm'>Semaine du 03 avril 2024</p>
     </div>
 
 </footer>
