--- a/webapp/templates/404.html
+++ b/webapp/templates/404.html
@@ -4,4 +4,8 @@
 
 {% block content %}
 
+<section class="flex pt-8 items-center">
+        <p>L'url à laquelle vous souhaitez accéder n'est pas valide.</p>
+</section>
+
 {% endblock content %}
