--- a/webapp/templates/includes/footer.html
+++ b/webapp/templates/includes/footer.html
@@ -10,7 +10,7 @@
         </a>
     </div>
     <div class="flex items-center">
-        <p class='md:text-sm'>Semaine du 03 avril 2024</p>
+        <p class='md:text-sm'>Semaine du {{ date_semaine }}</p>
     </div>
 
 </footer>
