--- a/webapp/dashboard/templates/dashboard/top10.html
+++ b/webapp/dashboard/templates/dashboard/top10.html
@@ -10,45 +10,44 @@
 
 {% block content %}
 
-<section class="flex flex-wrap w-full h-full p-10 justify-center items-center">
+<section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 p-10">
 
     {% for film in top_10 %}
 
-        <div class="flex p-7">
+        <div class="flex p-7 justify-center">
 
             <!-- preview -->
-            <div class="flex flex-col space-y-1 hover:cursor-pointer" id="film-preview" data-pk="{{ film.pk }}">
+            <div class="flex flex-col space-y-1 items-center md:items-start hover:cursor-pointer hover:text-c-green transition duration-300" id="film-preview" data-pk="{{ film.pk }}">
                 <p class="font-bold">Top {{ forloop.counter }}</p>
-                <img src="{{ film.affiche.url }}" class="max-w-48 h-auto" alt="Affiche du film {{ film.titre|capfirst }}">
-                <p class="max-w-48 md:max-w-72">Titre : {{ film.titre|capfirst }}</p>
-                <p>Pays : {{ film.pays|capfirst }}</p>
-                <p>Estimation : {{ film.estimation }} entrées</p>
+                <img src="{{ film.image_url }}" class="max-w-48 h-auto" alt="Affiche du film {{ film.titre|capfirst }}">
+                <p>Titre : {{ film.titre|capfirst }}</p>
+                <p>Pays : {{ film.pays|capfirst|default_if_none:"Pas d'informations" }}</p>
+                <p>Estimation : {{ film.estimation|floatformat:"g" }} entrées</p>
             </div>
 
             <!-- full infos -->
             <div class="hidden fixed inset-0 overflow-auto" id="full-{{ film.pk }}">
-                <span div class="absolute inset-0 z-20 bg-black bg-opacity-80" id="back-{{ film.pk }}"></span>
-                <span class="absolute top-6 right-6 z-40 text-4xl bg-white hover:cursor-pointer hover:text-5xl transition duration-300" id="cross-{{ film.pk }}">&times;</span>
-                <div class="absolute z-30 top-20 mx-20 p-10 bg-white rounded-lg">
-
-                    <div class="flex flex-col md:flex-row justify-evenly">
+                <span div class="absolute z-20 inset-0 bg-black bg-opacity-80" id="back-{{ film.pk }}"></span>
+                <span class="absolute z-40 top-6 right-6 text-4xl text-white hover:cursor-pointer hover:text-5xl transition duration-300" id="cross-{{ film.pk }}">&times;</span>
+                <div class="absolute z-30 w-10/12 top-20 left-12 md:left-16 lg:left-20 xl:left-24 p-10 bg-white rounded-lg">
+                    <div class="flex flex-col md:flex-row items-center justify-evenly">
                         <div>
-                            <img src="{{ film.affiche.url }}" class="w-auto h-auto" alt="Affiche du film {{ film.titre|capfirst }}">
+                            <img src="{{ film.image_url }}" class="w-auto h-auto" alt="Affiche du film {{ film.titre|capfirst }}">
                         </div>
-                        <div class="flex flex-col items-center justify-center gap-y-2">
+                        <div class="flex flex-col items-center justify-center pt-2 md:pt-0 md:pl-4 gap-y-2 text-center">
                             <p class="font-bold">Top {{ forloop.counter }}</p>
                             <p>Titre : {{ film.titre|capfirst }}</p>
-                            <p>Pays : {{ film.pays|capfirst }}</p>
-                            <p>Estimation du nombre d'entrées : {{ film.estimation }}</p>
-                            <p>Durée : {{ film.duree }}</p>
-                            <p>Genre : {{ film.genres }}</p>
-                            <p>Public : {{ film.pegi_fr }}</p>
-                            <p>Réalisateur : {{ film.realisateur }}</p>
-                            <p>Acteurs : {{ film.genres }}</p>
-                            <p>Studio : {{ film.studio }}</p>
+                            <p>Pays : {{ film.pays|capfirst|default_if_none:"Pas d'informations" }}</p>
+                            <p>Estimation du nombre d'entrées : {{ film.estimation|floatformat:"g" }}</p>
+                            <p>Durée : {{ film.duree|default_if_none:"Pas d'informations sur la durée en" }} minutes</p>
+                            <p>Genre : {{ film.genres|capfirst|default_if_none:"Pas d'informations" }}</p>
+                            <p>Public : {{ film.pegi_fr|capfirst|default_if_none:"Pas d'informations" }}</p>
+                            <p>Réalisateur : {{ film.realisateur|capfirst|default_if_none:"Pas d'informations" }}</p>
+                            <p>Acteurs : {{ film.acteurs|capfirst|default_if_none:"Pas d'informations" }}</p>
+                            <p>Studio : {{ film.studio|capfirst|default_if_none:"Pas d'informations" }}</p>
                         </div>
                     </div>
-                    <p class="p-2 md:p-8">Synopsis : {{ film.synopsis }}</p>
+                    <p class="p-4 md:p-8 text-center">Synopsis : {{ film.synopsis }}</p>
                 </div>
             </div>
 
