--- a/webapp/dashboard/templates/dashboard/statistic.html
+++ b/webapp/dashboard/templates/dashboard/statistic.html
@@ -4,6 +4,10 @@
 
 {% block title %}Statistiques - NIAB{% endblock title %}
 
+{% block script %}
+    <script src="{% static "js/statistic.js" %}"></script>
+{% endblock script %}
+
 {% block content %}
 
 <section class="flex flex-col w-full items-center p-10">
@@ -11,23 +15,28 @@
     <div class="flex flex-col gap-y-2 items-center">
         <p class="font-bold pb-2">Statistiques générales</p>
         <p>Estimation recette hebdomadaire : {{ stats.recette_hebdo|floatformat:"0" }} €</p>
-        <p>Estimation bénéfice : {{ stats.benefice|floatformat:"0" }} €</p>
-        <p>Taux de croissance hebdomadaire : {{ growth|floatformat:"0" }}%</p>
+        <p>Estimation bénéfice : <span id="result" data-result="{{ stats.benefice }}">{{ stats.benefice|floatformat:"0" }} €</span></p>
+        <p>Taux de croissance hebdomadaire : <span id="result" data-result="{{ growth }}">{{ growth|floatformat:"0" }}%</span></p>
     </div>
 
-    <div class="flex flex-col md:flex-row w-full pt-4 gap-y-2 justify-center text-center">
+    <div class="flex flex-col md:flex-row w-full pt-10 gap-y-8 justify-center text-center">
         {% for film in top_2 %}
-            <div class="flex flex-col gap-y-2 pt-4 md:px-4">
-                <p class="font-bold pb-2">Salle {{ forloop.counter }}</p>
+            <div class="flex flex-col gap-y-2 md:px-8">
+                <p class="font-bold pb-2">
+                    Salle {{ forloop.counter }}
+                    {% if forloop.counter == 1 %}
+                        <span>- 120 places</span>
+                    {% else %}
+                        <span>- 80 places</span>
+                    {% endif %}
+                </p>
                 <p>Film : {{ film.titre|capfirst }}</p>
                 <p>Estimation du nombre d'entrées sur la semaine : {{ film.estimation_hebdo_niab|floatformat:"0" }}</p>
                 <p>Estimation recette hebdomadaire : {{ film.estimation_recette_hebdo|floatformat:"0" }} €</p>
                 <p>Estimation du nombre d'entrées quotidien : {{ film.estimation_quoti_niab|floatformat:"0" }}</p>
                 {% if forloop.counter == 1 %}
-                    <p>120 places</p>
                     <p>Taux d'occupation : {{ stats.occup_salle_1|floatformat:"0" }}%</p>
                     {% else %}
-                    <p>80 places</p>
                     <p>Taux d'occupation : {{ stats.occup_salle_2|floatformat:"0" }}%</p>
                 {% endif %}
             </div>
