--- a/webapp/dashboard/templates/dashboard/historic.html
+++ b/webapp/dashboard/templates/dashboard/historic.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
 
+{% load static tailwind_tags %}
+
 {% block title %}Historique - NIAB{% endblock title %}
 
 {% block content %}
+
+<section>
+
+    
+</section>
 
 {% endblock content %}
