--- a/webapp/theme/static_src/src/styles.css
+++ b/webapp/theme/static_src/src/styles.css
@@ -14,4 +14,8 @@
     @apply hover:text-c-green hover:border-l-4 pl-2 hover:border-c-green transition duration-300
 }
 
+.tab {
+    @apply py-2 px-4 text-center
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Sansita&display=swap')
